# rfc

./: .gitignore  Cargo.toml  Makefile  README.md
crates/rpl/: Cargo.toml  README.md
crates/rpl-core/: Cargo.toml
crates/rpl-core/src/: lib.rs
crates/rpl-core/src/core/: mod.rs  types.rs  word.rs
crates/rpl-core/src/error/: diagnostic.rs
crates/rpl-core/src/token/: semantic.rs
crates/rpl-dap/: Cargo.toml
crates/rpl-dap/src/: handlers.rs  lib.rs  main.rs  session.rs
crates/rpl-ide/: CLAUDE.md  Cargo.toml
crates/rpl-ide/src/: core.rs  lib.rs  wasm.rs
crates/rpl-ide/tests/: integration.rs
crates/rpl-ide/tests/fixtures/test_project/: constants.rpl  main.rpl  project.toml
crates/rpl-ide/tests/fixtures/test_project/lib/: square.rpl
crates/rpl-ide/vscode/: .gitignore  package-lock.json  package.json  tsconfig.json
crates/rpl-ide/vscode/src/: extension.ts
crates/rpl-ide/wit/: ide.wit
crates/rpl-lang/: Cargo.toml
crates/rpl-lang/src/: debug_helpers.rs  dispatch_impl.rs  execute.rs  lib.rs  user_libs.rs  well_known.rs
crates/rpl-lang/src/analysis/: cache.rs  incremental.rs  mod.rs  patterns.rs  resolver.rs  result.rs  scopes.rs  state.rs  symbol_pass.rs  symbols.rs  token.rs  tokenizer.rs
crates/rpl-lang/src/compile/: compiler.rs  constructs.rs  infix.rs  mod.rs  output.rs  types.rs
crates/rpl-lang/src/decompile/: decompiler.rs  mod.rs
crates/rpl-lang/src/operator/: kind.rs  mod.rs  registry.rs  signature.rs
crates/rpl-lsp/: Cargo.toml
crates/rpl-lsp/src/: handlers.rs  lib.rs  main.rs  transport.rs
crates/rpl-macros/: Cargo.toml
crates/rpl-macros/src/: ast.rs  codegen.rs  lib.rs  parse.rs
crates/rpl-plot/: Cargo.toml
crates/rpl-plot/src/: color.rs  commands.rs  encoding.rs  error.rs  lib.rs  library.rs  plot.rpli  render.rs
crates/rpl-project/: Cargo.toml
crates/rpl-project/src/: error.rs  index.rs  lib.rs  loader.rs  manifest.rs
crates/rpl-project/tests/: integration.rs
crates/rpl-project/tests/fixtures/nested_project/: main.rpl  project.toml
crates/rpl-project/tests/fixtures/params_project/: main.rpl  project.toml
crates/rpl-project/tests/fixtures/simple_project/: main.rpl  project.toml
crates/rpl-repl/: Cargo.toml
crates/rpl-repl/src/: app.rs  commands.rs  lib.rs  main.rs  plot_decoder.rs
crates/rpl-repl/src/ui/: mod.rs  multiline_editor.rs  plot_view.rs  stack_sidebar.rs  stack_view.rs  status_bar.rs
crates/rpl-session/: Cargo.toml
crates/rpl-session/src/: lib.rs
crates/rpl-session/src/lsp/: completion.rs  hover.rs  mod.rs  navigation.rs  semantic.rs
crates/rpl-source/: Cargo.toml
crates/rpl-source/src/: cache.rs  file.rs  lib.rs  render.rs
crates/rpl-stdlib/: Cargo.toml  README.md
crates/rpl-stdlib/src/: arith.rs  arithmetic.rs  binary.rs  binary_int.rs  binary_ops.rs  blob.rs  codecs.rs  comments.rs  complex.rs  control_test.rs  directory.rs  extern_lib.rs  flow.rs  identifiers.rs  lib.rs  libptr.rs  list.rs  lists.rs  locals.rs  numbers.rs  prog.rs  programs.rs  stack.rs  statistics.rs  strings.rs  symbolic.rs  transcendentals.rs  userlib.rs
crates/rpl-stdlib/src/directory/: mod.rs  packdir.rs  serialize.rs
crates/rpl-stdlib/src/interfaces/: arith.rpli  binary.rpli  comments.rpli  directory.rpli  flow.rpli  list.rpli  locals.rpli  prog.rpli  stack.rpli  statistics.rpli  strings.rpli  symbolic.rpli  transcendentals.rpli  userlib.rpli
crates/rpl-stdlib/src/plot/: commands.rs  encoding.rs  mod.rs  render.rs
crates/rpl-tui/: Cargo.toml
crates/rpl-tui/src/: app.rs  commands.rs  event.rs  main.rs  plot_decoder.rs
crates/rpl-tui/src/input/: history.rs  kill_ring.rs  mod.rs  readline.rs
crates/rpl-tui/src/ui/: layout.rs  mod.rs  plot_view.rs  stack_sidebar.rs  stack_view.rs
crates/rpl-vector-plot/: Cargo.toml
crates/rpl-vector-plot/src/: builder.rs  decode.rs  element.rs  encode.rs  lib.rs  library.rs  paint.rs  path.rs  plot.rs  render.rs  types.rs  vector-plot.rpli
crates/rpl-vm/: Cargo.toml
crates/rpl-vm/src/: bytecode.rs  debug.rs  directory.rs  dispatch.rs  error.rs  execute.rs  executor.rs  frame.rs  lib.rs  machine.rs  source_map.rs  span.rs  stack.rs  symbolic.rs  value.rs  vm.rs
crates/rpl/src/: ir.rs  lib.rs  registry.rs  serialize.rs  symbolic.rs  types.rs  value.rs
crates/rpl/src/analysis/: README.md  analyzer.rs  context.rs  globals.rs  incremental.rs  mod.rs  patterns.rs  resolve.rs  result.rs  scopes.rs  state.rs  symbols.rs  traverse.rs  types.rs  visitor.rs
crates/rpl/src/core/: intern.rs  mod.rs  span.rs  types.rs
crates/rpl/src/error/: code.rs  mod.rs
crates/rpl/src/interface/: ast.rs  mod.rs  parse.rs  spec.rs
crates/rpl/src/libs/: arith.rs  binary.rs  comments.rs  directory.rs  flow.rs  list.rs  locals.rs  mod.rs  prog.rs  stack.rs  strings.rs  symbolic.rs  transcendentals.rs  userlib.rs
crates/rpl/src/lower/: README.md  mod.rs
crates/rpl/src/parse/: infix.rs  mod.rs
crates/rpl/src/registry/: executor.rs  interface.rs  lowerer.rs  mod.rs
crates/rpl/src/session/: debug.rs  lsp.rs  mod.rs
crates/rpl/src/source/: file.rs  mod.rs  render.rs
crates/rpl/src/token/: info.rs  mod.rs
crates/rpl/src/vm/: bytecode.rs  debug.rs  disasm.rs  locals.rs  mod.rs
editors/vscode/: extension.js  language-configuration.json  package-lock.json  package.json  rpl.tmLanguage.json  rpli.tmLanguage.json
examples/: print_factorial.rs
tests/: binary_int.rs  debug.rs  decompile.rs  errors.rs  incremental.rs  infix.rs  lsp.rs  pipeline.rs  user-libs.rs
tests/pipeline/: analysis.rs  arithmetic.rs  binary_int.rs  bytecode.rs  comparison.rs  complex.rs  directory.rs  errors.rs  fixtures.rs  flow.rs  libraries.rs  lists.rs  literals.rs  main.rs  programs.rs  projects.rs  stack.rs  strings.rs  symbolic.rs  transcendentals.rs
tests/programs/: eval_demo.rpl  factorial.rpl  fibonacci.rpl  gcd.rpl  list_ops.rpl  lsp_showcase.rpl  newton_sqrt.rpl  odds_evens.rpl  prime_sieve.rpl  quicksort.rpl  statistics.rpl  symbolic_derivative.rpl
tests/projects/hello/: constants.rpl  main.rpl  project.toml
tests/projects/hello/lib/: double.rpl  square.rpl
(+3 files in other folders)
