[workspace]
resolver = "2"
members = ["crates/rpl-lsp", "crates/rpl-dap", "crates/rpl-tui", "crates/rpl-vector-plot", "crates/rpl-sr5", "crates/rpl", "crates/rpl-stdlib", "crates/rpl-vm"]
default-members = [".", "crates/rpl-tui", "crates/rpl-lsp", "crates/rpl-dap", "crates/rpl-sr5", "crates/rpl-vector-plot", "crates/rpl", "crates/rpl-stdlib", "crates/rpl-vm"]

    [workspace.package]
    version = "0.1.0"
    edition = "2024"

    [workspace.lints.clippy]
    approx_constant = "allow"

    [workspace.dependencies]
    # Internal crates
    rpl-lsp = {path = "crates/rpl-lsp"}
    rpl-dap = {path = "crates/rpl-dap"}
    rpl-tui = {path = "crates/rpl-tui"}
    rpl-vector-plot = {path = "crates/rpl-vector-plot"}
    rpl-sr5 = {path = "crates/rpl-sr5"}
    rpl = {path = "crates/rpl"}
    rpl-stdlib = {path = "crates/rpl-stdlib"}
    rpl-vm = {path = "crates/rpl-vm"}

    # External dependencies
    smallvec = "1"
    thiserror = "2"
    serde = {version = "1.0", features = ["derive"]}
    serde_json = "1.0"
    lsp-types = "0.97"
    log = "0.4"
    dap = "0.4.1-alpha1"
    ratatui = "0.30.0-beta.0"
    crossterm = "0.28"
    dirs = "5"
    unicode-width = "0.2"
    unicode-segmentation = "1"
    pixels = "0.15"
    winit = "0.30"

# Root package for integration tests
[package]
name = "rfc"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
rpl-dap = {workspace = true}
rpl = {workspace = true}
rpl-stdlib = {workspace = true}
