[package]
name = "rpl-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rpl-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rpl = { path = "../rpl" }
rpl-stdlib = { path = "../rpl-stdlib" }
rpl-project = { path = "../rpl-project" }
lsp-types = "0.97"
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
