[package]
name = "rpl-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rpl-calc"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rpl = { path = "../rpl" }
rpl-plot = { path = "../rpl-plot" }
ratatui = "0.30.0-beta.0"
crossterm = "0.28"
dirs = "5"
unicode-width = "0.2"
unicode-segmentation = "1"
